# Tanks-Battlefield-2D-PD

./: Assets.hs  Colisiones.hs  Entidades.hs  Entrega2.hs  Entrega3.hs  Fisicas.hs  GameLogicCore.hs  Memoria.hs  PABLO.hs  README.md  Render.hs  Robot.hs  Tanque.hs  config.txt  ejecutable.hs  estadisticas.txt  main.hs  solucion.hs.hs  solucion2.hs  tanque.cabal  torneos.hs
Entregas/: Entrega1.hs  Entrega2.hs  Entrega3.hs  solucion2.hs
HAUS 4/: gloss.hi  gloss.hs  glossAnimate.hs  glossDisplay.hs  glossPlay.hs  juegoPrueba.hi  juegoPrueba.hs  juegoSimple.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
