cabal-version:       2.4
name:                Tanks-colision-sprite
version:             0.1.0.0
author:              Donato
maintainer:          Donato
license:             MIT
build-type:          Simple

executable Tanks-colision-sprite
  hs-source-dirs:      .
  main-is:             main.hs
  build-depends:
        base >=4.12 && <5,
        gloss >=1.13,
        gloss-juicy >=0.2.3,
        containers
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:
        Assets
        Render
        Entidades
        Robot
        Fisicas
        Colisiones
        Memoria
